landing video z-index fixes

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8747,6 +8747,7 @@ Copyright (c) 2013 Daniel Eden
   height: 100%; }
 
 .landing {
+  background-color: black;
   height: 100vh;
   position: relative;
   overflow: hidden;
@@ -8757,12 +8758,15 @@ Copyright (c) 2013 Daniel Eden
   min-width: 100%;
   min-height: 100%;
   top: 0;
+  bottom: 0;
   opacity: 0;
-  z-index: 100;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease; }
+  z-index: 10;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
+  -webkit-transition-timing-function: ease;
+  transition-timing-function: ease; }
   .landing-video.is-ready {
     opacity: 1; }
   .landing-video.is-trailer-playing {
@@ -8772,7 +8776,7 @@ Copyright (c) 2013 Daniel Eden
   height: 100%;
   position: relative;
   width: 100%;
-  z-index: 200; }
+  z-index: 20; }
   .landing-content .video-container {
     margin-top: 100px; }
 
@@ -8787,19 +8791,30 @@ Copyright (c) 2013 Daniel Eden
   position: absolute;
   top: 150px;
   width: 280px;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease; }
+  z-index: 30;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
+  -webkit-transition-timing-function: ease;
+  transition-timing-function: ease; }
   .landing-logo.is-trailer-playing {
+    -webkit-transform: translateY(-115px) scale(0.5);
+    -moz-transform: translateY(-115px) scale(0.5);
+    -ms-transform: translateY(-115px) scale(0.5);
+    -o-transform: translateY(-115px) scale(0.5);
     transform: translateY(-115px) scale(0.5); }
 
 #trailer-video {
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease; }
-  #trailer-video .is-trailer-playing {
+  opacity: 0;
+  z-index: 10;
+  -webkit-transition-property: all;
+  transition-property: all;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
+  -webkit-transition-timing-function: ease;
+  transition-timing-function: ease; }
+  #trailer-video.is-trailer-playing {
     opacity: 1; }
 
 .trailer-video-launch {
@@ -8811,13 +8826,27 @@ Copyright (c) 2013 Daniel Eden
   opacity: 0;
   text-transform: uppercase;
   width: 300px;
-  -webkit-transition: opacity 1s ease;
-  -moz-transition: opacity 1s ease;
-  -o-transition: opacity 1s ease;
-  -ms-transition: opacity 1s ease; }
+  z-index: 30;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
+  -webkit-transition-timing-function: ease;
+  transition-timing-function: ease; }
   .trailer-video-launch > .fa {
     padding-right: 12px; }
   .trailer-video-launch.is-ready {
     opacity: 1; }
   .trailer-video-launch.is-trailer-playing {
+    opacity: 0; }
+
+.landing-navbar {
+  opacity: 1;
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 1s;
+  transition-duration: 1s;
+  -webkit-transition-timing-function: ease;
+  transition-timing-function: ease; }
+  .landing-navbar.is-trailer-playing {
     opacity: 0; }
